Updated navbar and ShopPage title width issues that caused horizontal scrolling

--- a/src/styles/Navbar.scss
+++ b/src/styles/Navbar.scss
@@ -2,7 +2,6 @@
 @import '../styles/variables/variables.scss';
 
 .navbar {
-  width: 100%;
   height: $navbarHeight;
   font-weight: bold;
   position: sticky;
@@ -14,7 +13,6 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  gap: 1em;
   padding: 0 $navbarPaddingLeftRight;
 
   a {
@@ -24,6 +22,7 @@
       display: flex; 
       align-items: center; 
       position: relative; 
+      margin-right: 1em;
   
       &:hover {
         &::after {
