--- a/src/styles/ShopPage.scss
+++ b/src/styles/ShopPage.scss
@@ -6,17 +6,17 @@
   flex-direction: column;
   align-items: center;
   flex-grow: 1;
+  width: 100%;
   
   .product-page__title {
     font-size: $pageHeaderSize;
     font-family: $roboto;
-    // letter-spacing: 0.1em;
     font-weight: 800;
     margin: 0;
     background-color: $white;
     padding: 0 1em;
-    width: 100%;
     text-align: center;
+    width: calc(100% - 2em);
     @include containerShadow();
   }
 
